# PulseCore

./: .gitignore  README.md  package-lock.json  package.json  pnpm-lock.yaml
src/: style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: app.rs  main.rs  state.rs  tray.rs  types.rs
src-tauri/src/core/: mod.rs
src-tauri/src/core/collectors/: mod.rs  system_collector.rs
src-tauri/src/core/device_info/: mod.rs
src-tauri/src/core/network_test/: ping.rs
src-tauri/src/db/: mod.rs
src-tauri/src/ipc/: commands.rs
src/components/: LineChart.vue
src/i18n/locales/: en-US.json  zh-CN.json
src/pages/: CompactOverlayPage.vue  DashboardPage.vue  HardwareOverviewPage.vue  NetworkSpecsPage.vue  SettingsPage.vue
src/stores/: app.ts
src/types/: index.ts
