[package]
name = "pulsecore"
version = "0.1.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.10.2", features = [] }

[dependencies]
anyhow = "1.0.95"
chrono = { version = "0.4.39", features = ["serde"] }
futures-util = "0.3.31"
rand = "0.8.5"
regex = "1.11.1"
reqwest = { version = "0.12.12", default-features = false, features = ["rustls-tls", "stream"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
sqlx = { version = "0.8.3", features = ["runtime-tokio-rustls", "sqlite", "chrono"] }
sysinfo = "0.33.1"
tauri = { version = "2.10.2", features = ["tray-icon"] }
tokio = { version = "1.43.0", features = ["macros", "rt-multi-thread", "process", "sync", "time"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "fmt"] }
uuid = { version = "1.13.1", features = ["v4", "serde"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

